@@ -1,4 +1,8 @@
 2008-01-24 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsbox.c: fixed segfault/panic due to double free of metadata when
+      POST used for sendsms.
+
+2008-01-24 Alexander Malysh <amalysh at kannel.org>
     * gw/sms.c: fixed truncating of the message if split-chars defined in the
       config. Thanks to Giulio Harding for bug report.
 
